--- a/mine.css
+++ b/mine.css
@@ -42,3 +42,12 @@ h3 {
     padding-bottom: 10px;
     border-radius: 4px;
 }
+
+#sticky {
+}
+
+#sticky.stick {
+    position: fixed;
+    top: 50;
+    z-index: 10000;
+}
